@@ -1,6 +1,8 @@
 cupt (2.5.6~) UNRELEASED; urgency=low
 
-  * 
+  * lib:
+    - system/worker:
+      - Fatal errors should be logged regardless of the logging level.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 29 May 2012 22:45:17 +0300
 
